captions video fix overlap

--- a/less/custom/theme-extras.less
+++ b/less/custom/theme-extras.less
@@ -773,7 +773,13 @@ body{
 
 .mejs-captions-text {
     font-size: 2vw;
+    line-height: 1.2;
 }
+
+.mejs-captions-position-hover {
+    bottom: 0 !important;
+}
+
 
 @media screen and (max-width: 600px)
 {
